daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N27_bad_review_blind/auth_block.cbor.hex
a30081a200584011f3322ad775dd273a9f9325e571dc4a568c5e4f84b045f9c4bf5b1166111c283b7fe04f5a351da6b669c550a187493963ea136efeeeafaa95f8bbe28d263ae3015840bab00334db84a6628369b3861ff289e5610839fd1d35a2e259cfbceb2ca0c00135ac95f87549262e2d44473d3f5b227255cff57adcd8b6eb37b0fe8610494b4201f602f6
